jekyll info copy from TechnoTim

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ description: >-                        # used by seo meta and the atom feed
   A documentation website with all my brainfarts and findings. It keeps my head clean(er).
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: 'https://bedar.github.io'
+url: 'https://bedar89.github.io'
 
 github:
   username: bedar89             # change to your github username
